--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,310 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:rowCount="15"
+            android:columnCount="4">
+
+            <ImageView
+                android:id="@+id/rond1"
+                android:layout_margin="15dp"
+                android:layout_column="0"
+                android:layout_row="0"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond2"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="0"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond3"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="0"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond4"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="0"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond5"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="1"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond6"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="2"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond7"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="2"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond8"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="2"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond9"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="2"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond10"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="3"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond11"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="4"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond12"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="4"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond13"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="4"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond14"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="4"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond15"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="5"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond16"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="6"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond17"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="6"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond18"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="6"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond19"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="6"
+                app:srcCompat="@drawable/rondnoir"/>
+
+
+            <ImageView
+                android:id="@+id/rond20"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="7"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond21"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="8"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond22"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="8"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond23"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="8"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond24"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="8"
+                app:srcCompat="@drawable/rondnoir"/>
+
+
+            <ImageView
+                android:id="@+id/rond25"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="9"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond26"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="3"
+                android:layout_row="10"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond27"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="2"
+                android:layout_row="10"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond28"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="1"
+                android:layout_row="10"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond29"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="10"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond30"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="11"
+                app:srcCompat="@drawable/rondnoir"/>
+
+            <ImageView
+                android:id="@+id/rond31"
+                android:layout_margin="15dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_column="0"
+                android:layout_row="12"
+                app:srcCompat="@drawable/rondnoir"/>
+
+
+
+        </GridLayout>
+
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
