ajout de numéros pour les jours

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,15 +7,14 @@
     android:background="@color/background"
     tools:context=".MainActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:orientation="vertical">
 
         <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:columnCount="4"
             android:rowCount="15">
 
@@ -25,8 +24,11 @@
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir1" />
+
 
             <ImageView
                 android:id="@+id/rond2"
@@ -35,7 +37,7 @@
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir2" />
 
             <ImageView
                 android:id="@+id/rond3"
@@ -44,7 +46,7 @@
                 android:layout_row="0"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir3" />
 
             <ImageView
                 android:id="@+id/rond4"
@@ -53,7 +55,7 @@
                 android:layout_row="0"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir4" />
 
             <ImageView
                 android:id="@+id/rond5"
@@ -64,7 +66,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir5" />
 
             <ImageView
                 android:id="@+id/rond6"
@@ -75,7 +77,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir6" />
 
             <ImageView
                 android:id="@+id/rond7"
@@ -84,7 +86,7 @@
                 android:layout_row="2"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir7" />
 
             <ImageView
                 android:id="@+id/rond8"
@@ -93,7 +95,7 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir8" />
 
             <ImageView
                 android:id="@+id/rond9"
@@ -101,8 +103,10 @@
                 android:layout_height="60dp"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir9" />
 
             <ImageView
                 android:id="@+id/rond10"
@@ -110,8 +114,11 @@
                 android:layout_height="60dp"
                 android:layout_row="3"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir10" />
 
             <ImageView
                 android:id="@+id/rond11"
@@ -119,8 +126,10 @@
                 android:layout_height="60dp"
                 android:layout_row="4"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir11" />
 
             <ImageView
                 android:id="@+id/rond12"
@@ -129,7 +138,7 @@
                 android:layout_row="4"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir12" />
 
             <ImageView
                 android:id="@+id/rond13"
@@ -138,7 +147,7 @@
                 android:layout_row="4"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir13" />
 
             <ImageView
                 android:id="@+id/rond14"
@@ -147,7 +156,7 @@
                 android:layout_row="4"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir14" />
 
             <ImageView
                 android:id="@+id/rond15"
@@ -156,7 +165,7 @@
                 android:layout_row="5"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir15" />
 
             <ImageView
                 android:id="@+id/rond16"
@@ -165,7 +174,7 @@
                 android:layout_row="6"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir16" />
 
             <ImageView
                 android:id="@+id/rond17"
@@ -174,7 +183,7 @@
                 android:layout_row="6"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir17" />
 
             <ImageView
                 android:id="@+id/rond18"
@@ -183,7 +192,7 @@
                 android:layout_row="6"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir18" />
 
             <ImageView
                 android:id="@+id/rond19"
@@ -191,8 +200,10 @@
                 android:layout_height="60dp"
                 android:layout_row="6"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir19" />
 
 
             <ImageView
@@ -201,8 +212,11 @@
                 android:layout_height="60dp"
                 android:layout_row="7"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="15dp"
+                app:srcCompat="@drawable/noir20" />
 
             <ImageView
                 android:id="@+id/rond21"
@@ -210,8 +224,10 @@
                 android:layout_height="60dp"
                 android:layout_row="8"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir21" />
 
             <ImageView
                 android:id="@+id/rond22"
@@ -220,7 +236,7 @@
                 android:layout_row="8"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir22" />
 
             <ImageView
                 android:id="@+id/rond23"
@@ -229,7 +245,7 @@
                 android:layout_row="8"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir23" />
 
             <ImageView
                 android:id="@+id/rond24"
@@ -238,7 +254,7 @@
                 android:layout_row="8"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir24" />
 
 
             <ImageView
@@ -248,7 +264,7 @@
                 android:layout_row="9"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir25" />
 
             <ImageView
                 android:id="@+id/rond26"
@@ -257,7 +273,7 @@
                 android:layout_row="10"
                 android:layout_column="3"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir26" />
 
             <ImageView
                 android:id="@+id/rond27"
@@ -266,7 +282,7 @@
                 android:layout_row="10"
                 android:layout_column="2"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir27" />
 
             <ImageView
                 android:id="@+id/rond28"
@@ -275,7 +291,7 @@
                 android:layout_row="10"
                 android:layout_column="1"
                 android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                app:srcCompat="@drawable/noir28" />
 
             <ImageView
                 android:id="@+id/rond29"
@@ -283,8 +299,10 @@
                 android:layout_height="60dp"
                 android:layout_row="10"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                app:srcCompat="@drawable/noir29" />
 
             <ImageView
                 android:id="@+id/rond30"
@@ -292,8 +310,11 @@
                 android:layout_height="60dp"
                 android:layout_row="11"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="15dp"
+                app:srcCompat="@drawable/noir30" />
 
             <ImageView
                 android:id="@+id/rond31"
@@ -301,24 +322,28 @@
                 android:layout_height="60dp"
                 android:layout_row="12"
                 android:layout_column="0"
-                android:layout_margin="15dp"
-                app:srcCompat="@drawable/rondnoir" />
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="20dp"
+                app:srcCompat="@drawable/noir31" />
 
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_column="0"
+                android:layout_columnSpan="4"
+                android:layout_columnWeight="1"
                 android:layout_row="13"
+                android:layout_rowWeight="1"
                 android:id="@+id/resetButton"
-                android:layout_column="3"
                 android:text="@string/reset"/>
 
         </GridLayout>
 
 
 
-    </ScrollView>
+    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
