--- a/app/src/main/res/layout/activity_resolution_deux.xml
+++ b/app/src/main/res/layout/activity_resolution_deux.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:context=".MainActivity">
+    android:background="@color/background2"
+    tools:context=".ResolutionDeuxActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -339,6 +339,7 @@
                 android:id="@+id/resetButton"
                 android:text="@string/reset"/>
 
+
             <Button
                 android:layout_marginTop="10dp"
                 android:layout_column="0"
@@ -347,7 +348,7 @@
                 android:layout_row="14"
                 android:layout_rowWeight="1"
                 android:id="@+id/next"
-                android:text="@string/next"/>
+                android:text="@string/previous"/>
 
         </GridLayout>
 
